commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.charttrendlineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.charttrendlineupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineUpdateData:interface'
-    summary: '<span data-ttu-id="62aee-101">一个用于更新 ChartTrendline 对象上的数据的接口，可用于 "chartTrendline （</span><span class="sxs-lookup"><span data-stu-id="62aee-101">An interface for updating data on the ChartTrendline object, for use in "chartTrendline.set(</span></span><!-- --><span data-ttu-id="62aee-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="62aee-102"></span></span><!-- --><span data-ttu-id="62aee-103">)".</span><span class="sxs-lookup"><span data-stu-id="62aee-103"></span></span>'
+    summary: '<span data-ttu-id="4cb1a-101">一个用于更新 ChartTrendline 对象上的数据的接口，可用于`chartTrendline.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="4cb1a-101">An interface for updating data on the ChartTrendline object, for use in `chartTrendline.set({ ... })`</span></span><!-- --><span data-ttu-id="4cb1a-102">.</span><span class="sxs-lookup"><span data-stu-id="4cb1a-102"></span></span>'
     name: Excel.Interfaces.ChartTrendlineUpdateData
     fullName: Excel.Interfaces.ChartTrendlineUpdateData
     langs:
