--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.customconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.customconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="656a8-101">一个用于更新 CustomConditionalFormat 对象上的数据的接口，可用于 "customConditionalFormat （</span><span class="sxs-lookup"><span data-stu-id="656a8-101">An interface for updating data on the CustomConditionalFormat object, for use in "customConditionalFormat.set(</span></span><!-- --><span data-ttu-id="656a8-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="656a8-102"></span></span><!-- --><span data-ttu-id="656a8-103">)".</span><span class="sxs-lookup"><span data-stu-id="656a8-103"></span></span>'
+    summary: '<span data-ttu-id="89f80-101">一个用于更新 CustomConditionalFormat 对象上的数据的接口，可用于`customConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="89f80-101">An interface for updating data on the CustomConditionalFormat object, for use in `customConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="89f80-102">.</span><span class="sxs-lookup"><span data-stu-id="89f80-102"></span></span>'
     name: Excel.Interfaces.CustomConditionalFormatUpdateData
     fullName: Excel.Interfaces.CustomConditionalFormatUpdateData
     langs:
