--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangeviewcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangeviewcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="4a5ca-101">一个用于更新 RangeViewCollection 对象上的数据的接口，可用于 "rangeViewCollection （</span><span class="sxs-lookup"><span data-stu-id="4a5ca-101">An interface for updating data on the RangeViewCollection object, for use in "rangeViewCollection.set(</span></span><!-- --><span data-ttu-id="4a5ca-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="4a5ca-102"></span></span><!-- --><span data-ttu-id="4a5ca-103">)".</span><span class="sxs-lookup"><span data-stu-id="4a5ca-103"></span></span>'
+    summary: '<span data-ttu-id="e272c-101">一个用于更新 RangeViewCollection 对象上的数据的接口，可用于`rangeViewCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="e272c-101">An interface for updating data on the RangeViewCollection object, for use in `rangeViewCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="e272c-102">.</span><span class="sxs-lookup"><span data-stu-id="e272c-102"></span></span>'
     name: Excel.Interfaces.RangeViewCollectionUpdateData
     fullName: Excel.Interfaces.RangeViewCollectionUpdateData
     langs:
