--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.tabledata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.tabledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableData:interface'
-    summary: <span data-ttu-id="fddba-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="fddba-101">An interface describing the data returned by calling "table.toJSON()".</span></span>
+    summary: <span data-ttu-id="29ebb-101">描述通过调用返回的数据的接口`table.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="29ebb-101">An interface describing the data returned by calling `table.toJSON()`</span></span><!-- --><span data-ttu-id="29ebb-102">.</span><span class="sxs-lookup"><span data-stu-id="29ebb-102"></span></span>
     name: Excel.Interfaces.TableData
     fullName: Excel.Interfaces.TableData
     langs:
@@ -24,9 +24,9 @@ items:
       - 'excel!Excel.Interfaces.TableData#style:member'
   - uid: 'excel!Excel.Interfaces.TableData#columns:member'
     summary: |-
-      <span data-ttu-id="fddba-102">表示表中所有列的集合。</span><span class="sxs-lookup"><span data-stu-id="fddba-102">Represents a collection of all the columns in the table.</span></span> <span data-ttu-id="fddba-103">只读。</span><span class="sxs-lookup"><span data-stu-id="fddba-103">Read-only.</span></span>
+      <span data-ttu-id="29ebb-103">表示表中所有列的集合。</span><span class="sxs-lookup"><span data-stu-id="29ebb-103">Represents a collection of all the columns in the table.</span></span> <span data-ttu-id="29ebb-104">只读。</span><span class="sxs-lookup"><span data-stu-id="29ebb-104">Read-only.</span></span>
 
-      <span data-ttu-id="fddba-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: columns
     fullName: columns
     langs:
@@ -39,9 +39,9 @@ items:
           - 'excel!Excel.Interfaces.TableData#columns~0:complex'
   - uid: 'excel!Excel.Interfaces.TableData#highlightFirstColumn:member'
     summary: |-
-      <span data-ttu-id="fddba-105">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="fddba-105">Indicates whether the first column contains special formatting.</span></span>
+      <span data-ttu-id="29ebb-106">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="29ebb-106">Indicates whether the first column contains special formatting.</span></span>
 
-      <span data-ttu-id="fddba-106">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-106">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-107">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightFirstColumn
     fullName: highlightFirstColumn
     langs:
@@ -54,9 +54,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#highlightLastColumn:member'
     summary: |-
-      <span data-ttu-id="fddba-107">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="fddba-107">Indicates whether the last column contains special formatting.</span></span>
+      <span data-ttu-id="29ebb-108">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="29ebb-108">Indicates whether the last column contains special formatting.</span></span>
 
-      <span data-ttu-id="fddba-108">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-108">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-109">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-109">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightLastColumn
     fullName: highlightLastColumn
     langs:
@@ -69,9 +69,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#id:member'
     summary: |-
-      <span data-ttu-id="fddba-p102">返回用于唯一标识指定工作簿中表的值。即使表被重命名，标识符的值仍然相同。只读。</span><span class="sxs-lookup"><span data-stu-id="fddba-p102">Returns a value that uniquely identifies the table in a given workbook. The value of the identifier remains the same even when the table is renamed. Read-only.</span></span>
+      <span data-ttu-id="29ebb-p102">返回用于唯一标识指定工作簿中表的值。即使表被重命名，标识符的值仍然相同。只读。</span><span class="sxs-lookup"><span data-stu-id="29ebb-p102">Returns a value that uniquely identifies the table in a given workbook. The value of the identifier remains the same even when the table is renamed. Read-only.</span></span>
 
-      <span data-ttu-id="fddba-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -84,9 +84,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.TableData#name:member'
     summary: |-
-      <span data-ttu-id="fddba-113">表的名称。</span><span class="sxs-lookup"><span data-stu-id="fddba-113">Name of the table.</span></span>
+      <span data-ttu-id="29ebb-114">表的名称。</span><span class="sxs-lookup"><span data-stu-id="29ebb-114">Name of the table.</span></span>
 
-      <span data-ttu-id="fddba-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -99,9 +99,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.TableData#rows:member'
     summary: |-
-      <span data-ttu-id="fddba-115">表示表中所有行的集合。</span><span class="sxs-lookup"><span data-stu-id="fddba-115">Represents a collection of all the rows in the table.</span></span> <span data-ttu-id="fddba-116">只读。</span><span class="sxs-lookup"><span data-stu-id="fddba-116">Read-only.</span></span>
+      <span data-ttu-id="29ebb-116">表示表中所有行的集合。</span><span class="sxs-lookup"><span data-stu-id="29ebb-116">Represents a collection of all the rows in the table.</span></span> <span data-ttu-id="29ebb-117">只读。</span><span class="sxs-lookup"><span data-stu-id="29ebb-117">Read-only.</span></span>
 
-      <span data-ttu-id="fddba-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rows
     fullName: rows
     langs:
@@ -114,9 +114,9 @@ items:
           - 'excel!Excel.Interfaces.TableData#rows~0:complex'
   - uid: 'excel!Excel.Interfaces.TableData#showBandedColumns:member'
     summary: |-
-      <span data-ttu-id="fddba-118">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="fddba-118">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="29ebb-119">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="29ebb-119">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="fddba-119">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-119">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-120">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-120">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedColumns
     fullName: showBandedColumns
     langs:
@@ -129,9 +129,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showBandedRows:member'
     summary: |-
-      <span data-ttu-id="fddba-120">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="fddba-120">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="29ebb-121">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="29ebb-121">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="fddba-121">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-121">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-122">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-122">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedRows
     fullName: showBandedRows
     langs:
@@ -144,9 +144,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showFilterButton:member'
     summary: |-
-      <span data-ttu-id="fddba-p104">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="fddba-p104">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
+      <span data-ttu-id="29ebb-p104">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="29ebb-p104">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
 
-      <span data-ttu-id="fddba-124">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-124">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-125">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-125">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showFilterButton
     fullName: showFilterButton
     langs:
@@ -159,9 +159,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showHeaders:member'
     summary: |-
-      <span data-ttu-id="fddba-125">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="fddba-125">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="fddba-126">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="fddba-126">This value can be set to show or remove the header row.</span></span>
+      <span data-ttu-id="29ebb-126">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="29ebb-126">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="29ebb-127">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="29ebb-127">This value can be set to show or remove the header row.</span></span>
 
-      <span data-ttu-id="fddba-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-128">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-128">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showHeaders
     fullName: showHeaders
     langs:
@@ -174,9 +174,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showTotals:member'
     summary: |-
-      <span data-ttu-id="fddba-128">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="fddba-128">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="fddba-129">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="fddba-129">This value can be set to show or remove the total row.</span></span>
+      <span data-ttu-id="29ebb-129">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="29ebb-129">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="29ebb-130">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="29ebb-130">This value can be set to show or remove the total row.</span></span>
 
-      <span data-ttu-id="fddba-130">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-130">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-131">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-131">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showTotals
     fullName: showTotals
     langs:
@@ -189,9 +189,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#sort:member'
     summary: |-
-      <span data-ttu-id="fddba-131">表示表的排序。</span><span class="sxs-lookup"><span data-stu-id="fddba-131">Represents the sorting for the table.</span></span> <span data-ttu-id="fddba-132">只读。</span><span class="sxs-lookup"><span data-stu-id="fddba-132">Read-only.</span></span>
+      <span data-ttu-id="29ebb-132">表示表的排序。</span><span class="sxs-lookup"><span data-stu-id="29ebb-132">Represents the sorting for the table.</span></span> <span data-ttu-id="29ebb-133">只读。</span><span class="sxs-lookup"><span data-stu-id="29ebb-133">Read-only.</span></span>
 
-      <span data-ttu-id="fddba-133">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-133">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-134">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-134">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: sort
     fullName: sort
     langs:
@@ -204,9 +204,9 @@ items:
           - 'excel!Excel.Interfaces.TableSortData:interface'
   - uid: 'excel!Excel.Interfaces.TableData#style:member'
     summary: |-
-      <span data-ttu-id="fddba-134">表示表格样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="fddba-134">Constant value that represents the Table style.</span></span> <span data-ttu-id="fddba-135">可能的值为： "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleStyleDark1" 到 "TableStyleStyleDark11"。</span><span class="sxs-lookup"><span data-stu-id="fddba-135">Possible values are: "TableStyleLight1" through "TableStyleLight21", "TableStyleMedium1" through "TableStyleMedium28", "TableStyleStyleDark1" through "TableStyleStyleDark11".</span></span> <span data-ttu-id="fddba-136">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="fddba-136">A custom user-defined style present in the workbook can also be specified.</span></span>
+      <span data-ttu-id="29ebb-135">表示表格样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="29ebb-135">Constant value that represents the Table style.</span></span> <span data-ttu-id="29ebb-136">可能的值为： "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleStyleDark1" 到 "TableStyleStyleDark11"。</span><span class="sxs-lookup"><span data-stu-id="29ebb-136">Possible values are: "TableStyleLight1" through "TableStyleLight21", "TableStyleMedium1" through "TableStyleMedium28", "TableStyleStyleDark1" through "TableStyleStyleDark11".</span></span> <span data-ttu-id="29ebb-137">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="29ebb-137">A custom user-defined style present in the workbook can also be specified.</span></span>
 
-      <span data-ttu-id="fddba-137">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fddba-137">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="29ebb-138">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29ebb-138">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
