--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.chartseriescollection.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.chartseriescollection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ChartSeriesCollection:class'
     summary: |-
-      <span data-ttu-id="adc2c-101">表示图表系列的集合。</span><span class="sxs-lookup"><span data-stu-id="adc2c-101">Represents a collection of chart series.</span></span>
+      <span data-ttu-id="0fd19-101">表示图表系列的集合。</span><span class="sxs-lookup"><span data-stu-id="0fd19-101">Represents a collection of chart series.</span></span>
 
-      <span data-ttu-id="adc2c-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adc2c-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0fd19-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ChartSeriesCollection
     fullName: Excel.ChartSeriesCollection
     langs:
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.ChartSeriesCollection#load:member(3)'
       - 'excel!Excel.ChartSeriesCollection#toJSON:member(1)'
   - uid: 'excel!Excel.ChartSeriesCollection#context:member'
-    summary: <span data-ttu-id="adc2c-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="adc2c-103">The request context associated with the object.</span></span> <span data-ttu-id="adc2c-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="adc2c-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="0fd19-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="0fd19-103">The request context associated with the object.</span></span> <span data-ttu-id="0fd19-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="0fd19-104">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartSeriesCollection#count:member'
     summary: |-
-      <span data-ttu-id="adc2c-105">返回集合中的系列数量。</span><span class="sxs-lookup"><span data-stu-id="adc2c-105">Returns the number of series in the collection.</span></span> <span data-ttu-id="adc2c-106">只读。</span><span class="sxs-lookup"><span data-stu-id="adc2c-106">Read-only.</span></span>
+      <span data-ttu-id="0fd19-105">返回集合中的系列数量。</span><span class="sxs-lookup"><span data-stu-id="0fd19-105">Returns the number of series in the collection.</span></span> <span data-ttu-id="0fd19-106">只读。</span><span class="sxs-lookup"><span data-stu-id="0fd19-106">Read-only.</span></span>
 
-      <span data-ttu-id="adc2c-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adc2c-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0fd19-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: count
     fullName: count
     langs:
@@ -52,9 +52,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartSeriesCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="adc2c-108">返回集合中的系列数量。</span><span class="sxs-lookup"><span data-stu-id="adc2c-108">Returns the number of series in the collection.</span></span>
+      <span data-ttu-id="0fd19-108">返回集合中的系列数量。</span><span class="sxs-lookup"><span data-stu-id="0fd19-108">Returns the number of series in the collection.</span></span>
 
-      <span data-ttu-id="adc2c-109">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adc2c-109">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0fd19-109">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-109">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getCount()
     fullName: getCount()
     langs:
@@ -68,9 +68,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartSeriesCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="adc2c-110">根据其在集合中的位置检索系列</span><span class="sxs-lookup"><span data-stu-id="adc2c-110">Retrieves a series based on its position in the collection.</span></span>
+      <span data-ttu-id="0fd19-110">根据其在集合中的位置检索系列</span><span class="sxs-lookup"><span data-stu-id="0fd19-110">Retrieves a series based on its position in the collection.</span></span>
 
-      <span data-ttu-id="adc2c-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adc2c-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0fd19-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0fd19-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -84,7 +84,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="adc2c-112">示例</span><span class="sxs-lookup"><span data-stu-id="adc2c-112">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="0fd19-112">示例</span><span class="sxs-lookup"><span data-stu-id="0fd19-112">Examples</span></span>
 
           ```javascript
           // Get the name of the first series in the series collection.
@@ -103,11 +103,11 @@ items:
           ```
       parameters:
         - id: index
-          description: <span data-ttu-id="adc2c-113">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="adc2c-113">Index value of the object to be retrieved.</span></span> <span data-ttu-id="adc2c-114">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="adc2c-114">Zero-indexed.</span></span>
+          description: <span data-ttu-id="0fd19-113">要检索的对象的索引值。</span><span class="sxs-lookup"><span data-stu-id="0fd19-113">Index value of the object to be retrieved.</span></span> <span data-ttu-id="0fd19-114">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="0fd19-114">Zero-indexed.</span></span>
           type:
             - number
   - uid: 'excel!Excel.ChartSeriesCollection#items:member'
-    summary: <span data-ttu-id="adc2c-115">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="adc2c-115">Gets the loaded child items in this collection.</span></span>
+    summary: <span data-ttu-id="0fd19-115">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="0fd19-115">Gets the loaded child items in this collection.</span></span>
     name: items
     fullName: items
     langs:
@@ -119,33 +119,25 @@ items:
         type:
           - 'excel!Excel.ChartSeriesCollection#items~0:complex'
   - uid: 'excel!Excel.ChartSeriesCollection#load:member(1)'
-    summary: <span data-ttu-id="adc2c-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="adc2c-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="adc2c-117">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="adc2c-117">You must call "context.sync()" before reading the properties.</span></span>
-    remarks: |-
-      <span data-ttu-id="adc2c-118">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="adc2c-118">In addition to this signature, this method has the following signatures:</span></span>
-
-      <span data-ttu-id="adc2c-119">`load(option?: string | string[]): Excel.ChartSeriesCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="adc2c-119">`load(option?: string | string[]): Excel.ChartSeriesCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
-
-      <span data-ttu-id="adc2c-120">`load(option?: { select?: string; expand?: string; }): Excel.ChartSeriesCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="adc2c-120">`load(option?: { select?: string; expand?: string; }): Excel.ChartSeriesCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
-
-      <span data-ttu-id="adc2c-121">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartSeriesCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="adc2c-121">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartSeriesCollection` - Only available on collection types.</span></span> <span data-ttu-id="adc2c-122">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="adc2c-122">It is similar to the preceding signature.</span></span> <span data-ttu-id="adc2c-123">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="adc2c-123">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="adc2c-124">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="adc2c-124">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="adc2c-125">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="adc2c-125">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="0fd19-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="0fd19-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="0fd19-117">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(options)
+    fullName: load(options)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: Excel.Interfaces.ChartSeriesCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.ChartSeriesCollection;'
+      content: 'load(options?: Excel.Interfaces.ChartSeriesCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.ChartSeriesCollection;'
       return:
         type:
           - 'excel!Excel.ChartSeriesCollection:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: options
+          description: <span data-ttu-id="0fd19-118">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="0fd19-118">Provides options for which properties of the object to load.</span></span>
           type:
             - 'excel!Excel.ChartSeriesCollection#load~0:complex'
   - uid: 'excel!Excel.ChartSeriesCollection#load:member(2)'
-    summary: <span data-ttu-id="adc2c-126">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="adc2c-126">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="adc2c-127">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="adc2c-127">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="0fd19-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="0fd19-120">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="0fd19-120">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -159,7 +151,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="adc2c-128">示例</span><span class="sxs-lookup"><span data-stu-id="adc2c-128">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="0fd19-121">示例</span><span class="sxs-lookup"><span data-stu-id="0fd19-121">Examples</span></span>
 
           ```javascript
           // Getting the names of series in the series collection.
@@ -196,28 +188,29 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="adc2c-129">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="adc2c-129">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: <span data-ttu-id="0fd19-122">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-122">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartSeriesCollection#load:member(3)'
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="0fd19-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="0fd19-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="0fd19-124">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(propertyNamesAndPaths)
+    fullName: load(propertyNamesAndPaths)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: OfficeExtension.LoadOption): Excel.ChartSeriesCollection;'
+      content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.ChartSeriesCollection;'
       return:
         type:
           - 'excel!Excel.ChartSeriesCollection:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: propertyNamesAndPaths
+          description: '<span data-ttu-id="0fd19-125">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="0fd19-125">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
           type:
             - 'excel!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.ChartSeriesCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="adc2c-130">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="adc2c-130">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="adc2c-131">.</span><span class="sxs-lookup"><span data-stu-id="adc2c-131"></span></span> <span data-ttu-id="adc2c-132">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="adc2c-132"></span></span><!-- --><span data-ttu-id="adc2c-133">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ChartSeriesCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartSeriesCollectionData`</span><span class="sxs-lookup"><span data-stu-id="adc2c-133">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.ChartSeriesCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartSeriesCollectionData`</span></span><!-- --><span data-ttu-id="adc2c-134">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="adc2c-134">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: '<span data-ttu-id="0fd19-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="0fd19-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="0fd19-127">.</span><span class="sxs-lookup"><span data-stu-id="0fd19-127"></span></span> <span data-ttu-id="0fd19-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="0fd19-128"></span></span><!-- --><span data-ttu-id="0fd19-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ChartSeriesCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartSeriesCollectionData`</span><span class="sxs-lookup"><span data-stu-id="0fd19-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.ChartSeriesCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartSeriesCollectionData`</span></span><!-- --><span data-ttu-id="0fd19-130">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="0fd19-130">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
