--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.applicationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.applicationupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ApplicationUpdateData:interface'
-    summary: '<span data-ttu-id="a4a79-101">用于更新 Application 对象上的数据的接口，可用于 "application. set （</span><span class="sxs-lookup"><span data-stu-id="a4a79-101">An interface for updating data on the Application object, for use in "application.set(</span></span><!-- --><span data-ttu-id="a4a79-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="a4a79-102"></span></span><!-- --><span data-ttu-id="a4a79-103">)".</span><span class="sxs-lookup"><span data-stu-id="a4a79-103"></span></span>'
+    summary: '<span data-ttu-id="422b7-101">一个用于更新 Application 对象上的数据的接口，可用于`application.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="422b7-101">An interface for updating data on the Application object, for use in `application.set({ ... })`</span></span><!-- --><span data-ttu-id="422b7-102">.</span><span class="sxs-lookup"><span data-stu-id="422b7-102"></span></span>'
     name: Excel.Interfaces.ApplicationUpdateData
     fullName: Excel.Interfaces.ApplicationUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ApplicationUpdateData#calculationMode:member'
   - uid: 'excel!Excel.Interfaces.ApplicationUpdateData#calculationMode:member'
     summary: |-
-      <span data-ttu-id="a4a79-104">返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="a4a79-104">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="a4a79-105">可能的值包括：`Automatic`</span><span class="sxs-lookup"><span data-stu-id="a4a79-105">Possible values are: `Automatic`</span></span><!-- --><span data-ttu-id="a4a79-106">，Excel 控制重新计算的位置;`AutomaticExceptTables`</span><span class="sxs-lookup"><span data-stu-id="a4a79-106">, where Excel controls recalculation; `AutomaticExceptTables`</span></span><!-- --><span data-ttu-id="a4a79-107">，Excel 在其中控制重新计算，但忽略表中的更改。`Manual`</span><span class="sxs-lookup"><span data-stu-id="a4a79-107">, where Excel controls recalculation but ignores changes in tables; `Manual`</span></span><!-- --><span data-ttu-id="a4a79-108">，在用户请求计算时完成计算。</span><span class="sxs-lookup"><span data-stu-id="a4a79-108">, where calculation is done when the user requests it.</span></span>
+      <span data-ttu-id="422b7-103">返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="422b7-103">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="422b7-104">可能的值包括：`Automatic`</span><span class="sxs-lookup"><span data-stu-id="422b7-104">Possible values are: `Automatic`</span></span><!-- --><span data-ttu-id="422b7-105">，Excel 控制重新计算的位置;`AutomaticExceptTables`</span><span class="sxs-lookup"><span data-stu-id="422b7-105">, where Excel controls recalculation; `AutomaticExceptTables`</span></span><!-- --><span data-ttu-id="422b7-106">，Excel 在其中控制重新计算，但忽略表中的更改。`Manual`</span><span class="sxs-lookup"><span data-stu-id="422b7-106">, where Excel controls recalculation but ignores changes in tables; `Manual`</span></span><!-- --><span data-ttu-id="422b7-107">，在用户请求计算时完成计算。</span><span class="sxs-lookup"><span data-stu-id="422b7-107">, where calculation is done when the user requests it.</span></span>
 
-      <span data-ttu-id="a4a79-109">\[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a4a79-109">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="422b7-108">\[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="422b7-108">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: calculationMode
     fullName: calculationMode
     langs:
