--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.autofilterdata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.autofilterdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.AutoFilterData:interface'
-    summary: <span data-ttu-id="758a1-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="758a1-101">An interface describing the data returned by calling "autoFilter.toJSON()".</span></span>
+    summary: <span data-ttu-id="54590-101">描述通过调用返回的数据的接口`autoFilter.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="54590-101">An interface describing the data returned by calling `autoFilter.toJSON()`</span></span><!-- --><span data-ttu-id="54590-102">.</span><span class="sxs-lookup"><span data-stu-id="54590-102"></span></span>
     name: Excel.Interfaces.AutoFilterData
     fullName: Excel.Interfaces.AutoFilterData
     langs:
