--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.bindingcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.bindingcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.BindingCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="8df13-101">一个用于更新 BindingCollection 对象上的数据的接口，可用于 "bindingCollection （</span><span class="sxs-lookup"><span data-stu-id="8df13-101">An interface for updating data on the BindingCollection object, for use in "bindingCollection.set(</span></span><!-- --><span data-ttu-id="8df13-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="8df13-102"></span></span><!-- --><span data-ttu-id="8df13-103">)".</span><span class="sxs-lookup"><span data-stu-id="8df13-103"></span></span>'
+    summary: '<span data-ttu-id="54d2b-101">一个用于更新 BindingCollection 对象上的数据的接口，可用于`bindingCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="54d2b-101">An interface for updating data on the BindingCollection object, for use in `bindingCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="54d2b-102">.</span><span class="sxs-lookup"><span data-stu-id="54d2b-102"></span></span>'
     name: Excel.Interfaces.BindingCollectionUpdateData
     fullName: Excel.Interfaces.BindingCollectionUpdateData
     langs:
