--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartareaformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartareaformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="00a18-101">封装整个图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="00a18-101">Encapsulates the format properties for the overall chart area.</span></span>
+      <span data-ttu-id="0f924-101">封装整个图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="0f924-101">Encapsulates the format properties for the overall chart area.</span></span>
 
-      <span data-ttu-id="00a18-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00a18-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0f924-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0f924-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartAreaFormatLoadOptions
     fullName: Excel.Interfaces.ChartAreaFormatLoadOptions
     langs:
@@ -15,6 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions#font:member'
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions#$all:member'
+    summary: '<span data-ttu-id="0f924-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="0f924-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="0f924-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="0f924-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="0f924-105">).</span><span class="sxs-lookup"><span data-stu-id="0f924-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -27,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="00a18-103">表示当前对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="00a18-103">Represents the font attributes (font name, font size, color, etc.) for the current object.</span></span>
+      <span data-ttu-id="0f924-106">表示当前对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="0f924-106">Represents the font attributes (font name, font size, color, etc.) for the current object.</span></span>
 
-      <span data-ttu-id="00a18-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00a18-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="0f924-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0f924-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: font
     fullName: font
     langs:
