--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartaxisupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartaxisupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData:interface'
-    summary: '<span data-ttu-id="a2f8b-101">一个用于更新 ChartAxis 对象上的数据的接口，可用于 "chartAxis （</span><span class="sxs-lookup"><span data-stu-id="a2f8b-101">An interface for updating data on the ChartAxis object, for use in "chartAxis.set(</span></span><!-- --><span data-ttu-id="a2f8b-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="a2f8b-102"></span></span><!-- --><span data-ttu-id="a2f8b-103">)".</span><span class="sxs-lookup"><span data-stu-id="a2f8b-103"></span></span>'
+    summary: '<span data-ttu-id="92c23-101">一个用于更新 ChartAxis 对象上的数据的接口，可用于`chartAxis.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="92c23-101">An interface for updating data on the ChartAxis object, for use in `chartAxis.set({ ... })`</span></span><!-- --><span data-ttu-id="92c23-102">.</span><span class="sxs-lookup"><span data-stu-id="92c23-102"></span></span>'
     name: Excel.Interfaces.ChartAxisUpdateData
     fullName: Excel.Interfaces.ChartAxisUpdateData
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisUpdateData#title:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="a2f8b-104">表示 chart 对象的格式，包括线条和字体格式。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-104">Represents the formatting of a chart object, which includes line and font formatting.</span></span>
+      <span data-ttu-id="92c23-103">表示 chart 对象的格式，包括线条和字体格式。</span><span class="sxs-lookup"><span data-stu-id="92c23-103">Represents the formatting of a chart object, which includes line and font formatting.</span></span>
 
-      <span data-ttu-id="a2f8b-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -34,9 +34,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#majorGridlines:member'
     summary: |-
-      <span data-ttu-id="a2f8b-106">返回一个表示指定坐标轴的主要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-106">Returns a Gridlines object that represents the major gridlines for the specified axis.</span></span>
+      <span data-ttu-id="92c23-105">返回一个表示指定坐标轴的主要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="92c23-105">Returns a Gridlines object that represents the major gridlines for the specified axis.</span></span>
 
-      <span data-ttu-id="a2f8b-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: majorGridlines
     fullName: majorGridlines
     langs:
@@ -49,9 +49,9 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#majorUnit:member'
     summary: |-
-      <span data-ttu-id="a2f8b-108">表示两个主要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-108">Represents the interval between two major tick marks.</span></span> <span data-ttu-id="a2f8b-109">可以设置为数字值或空字符串。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-109">Can be set to a numeric value or an empty string.</span></span> <span data-ttu-id="a2f8b-110">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-110">The returned value is always a number.</span></span>
+      <span data-ttu-id="92c23-107">表示两个主要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="92c23-107">Represents the interval between two major tick marks.</span></span> <span data-ttu-id="92c23-108">可以设置为数字值或空字符串。</span><span class="sxs-lookup"><span data-stu-id="92c23-108">Can be set to a numeric value or an empty string.</span></span> <span data-ttu-id="92c23-109">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="92c23-109">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="a2f8b-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: majorUnit
     fullName: majorUnit
     langs:
@@ -64,9 +64,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#maximum:member'
     summary: |-
-      <span data-ttu-id="a2f8b-112">表示数值轴上的最大值。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-112">Represents the maximum value on the value axis.</span></span> <span data-ttu-id="a2f8b-113">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-113">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="a2f8b-114">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-114">The returned value is always a number.</span></span>
+      <span data-ttu-id="92c23-111">表示数值轴上的最大值。</span><span class="sxs-lookup"><span data-stu-id="92c23-111">Represents the maximum value on the value axis.</span></span> <span data-ttu-id="92c23-112">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="92c23-112">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="92c23-113">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="92c23-113">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="a2f8b-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: maximum
     fullName: maximum
     langs:
@@ -79,9 +79,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#minimum:member'
     summary: |-
-      <span data-ttu-id="a2f8b-116">表示数值轴上的最小值。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-116">Represents the minimum value on the value axis.</span></span> <span data-ttu-id="a2f8b-117">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-117">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="a2f8b-118">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-118">The returned value is always a number.</span></span>
+      <span data-ttu-id="92c23-115">表示数值轴上的最小值。</span><span class="sxs-lookup"><span data-stu-id="92c23-115">Represents the minimum value on the value axis.</span></span> <span data-ttu-id="92c23-116">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="92c23-116">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="92c23-117">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="92c23-117">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="a2f8b-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minimum
     fullName: minimum
     langs:
@@ -94,9 +94,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#minorGridlines:member'
     summary: |-
-      <span data-ttu-id="a2f8b-120">返回一个表示指定坐标轴的次要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-120">Returns a Gridlines object that represents the minor gridlines for the specified axis.</span></span>
+      <span data-ttu-id="92c23-119">返回一个表示指定坐标轴的次要网格线的网格线对象。</span><span class="sxs-lookup"><span data-stu-id="92c23-119">Returns a Gridlines object that represents the minor gridlines for the specified axis.</span></span>
 
-      <span data-ttu-id="a2f8b-121">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-121">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minorGridlines
     fullName: minorGridlines
     langs:
@@ -109,9 +109,9 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#minorUnit:member'
     summary: |-
-      <span data-ttu-id="a2f8b-122">表示两个次要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-122">Represents the interval between two minor tick marks.</span></span> <span data-ttu-id="a2f8b-123">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-123">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="a2f8b-124">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-124">The returned value is always a number.</span></span>
+      <span data-ttu-id="92c23-121">表示两个次要刻度标记之间的间隔。</span><span class="sxs-lookup"><span data-stu-id="92c23-121">Represents the interval between two minor tick marks.</span></span> <span data-ttu-id="92c23-122">可以设置为数字值或空字符串（对于自动坐标轴值）。</span><span class="sxs-lookup"><span data-stu-id="92c23-122">Can be set to a numeric value or an empty string (for automatic axis values).</span></span> <span data-ttu-id="92c23-123">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="92c23-123">The returned value is always a number.</span></span>
 
-      <span data-ttu-id="a2f8b-125">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-125">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-124">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: minorUnit
     fullName: minorUnit
     langs:
@@ -124,9 +124,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.ChartAxisUpdateData#title:member'
     summary: |-
-      <span data-ttu-id="a2f8b-126">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="a2f8b-126">Represents the axis title.</span></span>
+      <span data-ttu-id="92c23-125">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="92c23-125">Represents the axis title.</span></span>
 
-      <span data-ttu-id="a2f8b-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a2f8b-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92c23-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92c23-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: title
     fullName: title
     langs:
