--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartfontloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartfontloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="6ed28-101">此对象表示 chart 对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="6ed28-101">This object represents the font attributes (font name, font size, color, etc.) for a chart object.</span></span>
+      <span data-ttu-id="92ef2-101">此对象表示 chart 对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="92ef2-101">This object represents the font attributes (font name, font size, color, etc.) for a chart object.</span></span>
 
-      <span data-ttu-id="6ed28-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ed28-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92ef2-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92ef2-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartFontLoadOptions
     fullName: Excel.Interfaces.ChartFontLoadOptions
     langs:
@@ -20,6 +20,7 @@ items:
       - 'excel!Excel.Interfaces.ChartFontLoadOptions#size:member'
       - 'excel!Excel.Interfaces.ChartFontLoadOptions#underline:member'
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions#$all:member'
+    summary: '<span data-ttu-id="92ef2-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="92ef2-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="92ef2-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="92ef2-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="92ef2-105">).</span><span class="sxs-lookup"><span data-stu-id="92ef2-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -32,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions#bold:member'
     summary: |-
-      <span data-ttu-id="6ed28-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="6ed28-103">Represents the bold status of font.</span></span>
+      <span data-ttu-id="92ef2-106">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="92ef2-106">Represents the bold status of font.</span></span>
 
-      <span data-ttu-id="6ed28-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ed28-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92ef2-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92ef2-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bold
     fullName: bold
     langs:
@@ -47,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="6ed28-105">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="6ed28-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="6ed28-106">例如，</span><span class="sxs-lookup"><span data-stu-id="6ed28-106">E.g.</span></span> <span data-ttu-id="6ed28-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="6ed28-107">\#FF0000 represents Red.</span></span>
+      <span data-ttu-id="92ef2-108">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="92ef2-108">HTML color code representation of the text color.</span></span> <span data-ttu-id="92ef2-109">例如，</span><span class="sxs-lookup"><span data-stu-id="92ef2-109">E.g.</span></span> <span data-ttu-id="92ef2-110">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="92ef2-110">\#FF0000 represents Red.</span></span>
 
-      <span data-ttu-id="6ed28-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ed28-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92ef2-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92ef2-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -62,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions#italic:member'
     summary: |-
-      <span data-ttu-id="6ed28-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="6ed28-109">Represents the italic status of the font.</span></span>
+      <span data-ttu-id="92ef2-112">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="92ef2-112">Represents the italic status of the font.</span></span>
 
-      <span data-ttu-id="6ed28-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ed28-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92ef2-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92ef2-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: italic
     fullName: italic
     langs:
@@ -77,9 +78,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="6ed28-111">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="6ed28-111">Font name (e.g. "Calibri")</span></span>
+      <span data-ttu-id="92ef2-114">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="92ef2-114">Font name (e.g. "Calibri")</span></span>
 
-      <span data-ttu-id="6ed28-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ed28-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92ef2-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92ef2-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -92,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions#size:member'
     summary: |-
-      <span data-ttu-id="6ed28-113">字号（例如，11）</span><span class="sxs-lookup"><span data-stu-id="6ed28-113">Size of the font (e.g. 11)</span></span>
+      <span data-ttu-id="92ef2-116">字号（例如，11）</span><span class="sxs-lookup"><span data-stu-id="92ef2-116">Size of the font (e.g. 11)</span></span>
 
-      <span data-ttu-id="6ed28-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ed28-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92ef2-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92ef2-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: size
     fullName: size
     langs:
@@ -107,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions#underline:member'
     summary: |-
-      <span data-ttu-id="6ed28-115">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="6ed28-115">Type of underline applied to the font.</span></span> <span data-ttu-id="6ed28-116">有关详细信息，请参阅 ChartUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="6ed28-116">See Excel.ChartUnderlineStyle for details.</span></span>
+      <span data-ttu-id="92ef2-118">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="92ef2-118">Type of underline applied to the font.</span></span> <span data-ttu-id="92ef2-119">有关详细信息，请参阅 ChartUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="92ef2-119">See Excel.ChartUnderlineStyle for details.</span></span>
 
-      <span data-ttu-id="6ed28-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ed28-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="92ef2-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92ef2-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: underline
     fullName: underline
     langs:
