--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartlegendformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartlegendformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
-    summary: <span data-ttu-id="2be0d-101">描述通过调用 "chartLegendFormat （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2be0d-101">An interface describing the data returned by calling "chartLegendFormat.toJSON()".</span></span>
+    summary: <span data-ttu-id="12222-101">描述通过调用返回的数据的接口`chartLegendFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="12222-101">An interface describing the data returned by calling `chartLegendFormat.toJSON()`</span></span><!-- --><span data-ttu-id="12222-102">.</span><span class="sxs-lookup"><span data-stu-id="12222-102"></span></span>
     name: Excel.Interfaces.ChartLegendFormatData
     fullName: Excel.Interfaces.ChartLegendFormatData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendFormatData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData#font:member'
     summary: |-
-      <span data-ttu-id="2be0d-102">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="2be0d-102">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span> <span data-ttu-id="2be0d-103">只读。</span><span class="sxs-lookup"><span data-stu-id="2be0d-103">Read-only.</span></span>
+      <span data-ttu-id="12222-103">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="12222-103">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span> <span data-ttu-id="12222-104">只读。</span><span class="sxs-lookup"><span data-stu-id="12222-104">Read-only.</span></span>
 
-      <span data-ttu-id="2be0d-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2be0d-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="12222-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="12222-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: font
     fullName: font
     langs:
