--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.conditionalformatruledata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.conditionalformatruledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleData:interface'
-    summary: <span data-ttu-id="78dd7-101">描述通过调用 "conditionalFormatRule （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="78dd7-101">An interface describing the data returned by calling "conditionalFormatRule.toJSON()".</span></span>
+    summary: <span data-ttu-id="4229c-101">描述通过调用返回的数据的接口`conditionalFormatRule.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4229c-101">An interface describing the data returned by calling `conditionalFormatRule.toJSON()`</span></span><!-- --><span data-ttu-id="4229c-102">.</span><span class="sxs-lookup"><span data-stu-id="4229c-102"></span></span>
     name: Excel.Interfaces.ConditionalFormatRuleData
     fullName: Excel.Interfaces.ConditionalFormatRuleData
     langs:
