--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartseriesformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartseriesformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartSeriesFormatUpdateData:interface'
-    summary: '<span data-ttu-id="b3321-101">一个用于更新 ChartSeriesFormat 对象上的数据的接口，可用于 "chartSeriesFormat （</span><span class="sxs-lookup"><span data-stu-id="b3321-101">An interface for updating data on the ChartSeriesFormat object, for use in "chartSeriesFormat.set(</span></span><!-- --><span data-ttu-id="b3321-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="b3321-102"></span></span><!-- --><span data-ttu-id="b3321-103">)".</span><span class="sxs-lookup"><span data-stu-id="b3321-103"></span></span>'
+    summary: '<span data-ttu-id="f6e5a-101">一个用于更新 ChartSeriesFormat 对象上的数据的接口，可用于`chartSeriesFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="f6e5a-101">An interface for updating data on the ChartSeriesFormat object, for use in `chartSeriesFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="f6e5a-102">.</span><span class="sxs-lookup"><span data-stu-id="f6e5a-102"></span></span>'
     name: Excel.Interfaces.ChartSeriesFormatUpdateData
     fullName: Excel.Interfaces.ChartSeriesFormatUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesFormatUpdateData#line:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesFormatUpdateData#line:member'
     summary: |-
-      <span data-ttu-id="b3321-104">表示线条格式。</span><span class="sxs-lookup"><span data-stu-id="b3321-104">Represents line formatting.</span></span>
+      <span data-ttu-id="f6e5a-103">表示线条格式。</span><span class="sxs-lookup"><span data-stu-id="f6e5a-103">Represents line formatting.</span></span>
 
-      <span data-ttu-id="b3321-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3321-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f6e5a-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f6e5a-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: line
     fullName: line
     langs:
