--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="a39ae-101">一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于 "conditionalRangeBorderCollection （</span><span class="sxs-lookup"><span data-stu-id="a39ae-101">An interface for updating data on the ConditionalRangeBorderCollection object, for use in "conditionalRangeBorderCollection.set(</span></span><!-- --><span data-ttu-id="a39ae-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="a39ae-102"></span></span><!-- --><span data-ttu-id="a39ae-103">)".</span><span class="sxs-lookup"><span data-stu-id="a39ae-103"></span></span>'
+    summary: '<span data-ttu-id="f8ef9-101">一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于`conditionalRangeBorderCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="f8ef9-101">An interface for updating data on the ConditionalRangeBorderCollection object, for use in `conditionalRangeBorderCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="f8ef9-102">.</span><span class="sxs-lookup"><span data-stu-id="f8ef9-102"></span></span>'
     name: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
     fullName: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#top:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#bottom:member'
     summary: |-
-      <span data-ttu-id="a39ae-104">获取下边框。</span><span class="sxs-lookup"><span data-stu-id="a39ae-104">Gets the bottom border.</span></span>
+      <span data-ttu-id="f8ef9-103">获取下边框。</span><span class="sxs-lookup"><span data-stu-id="f8ef9-103">Gets the bottom border.</span></span>
 
-      <span data-ttu-id="a39ae-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a39ae-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f8ef9-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8ef9-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: bottom
     fullName: bottom
     langs:
@@ -42,9 +42,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#items~0:complex'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="a39ae-106">获取左边框。</span><span class="sxs-lookup"><span data-stu-id="a39ae-106">Gets the left border.</span></span>
+      <span data-ttu-id="f8ef9-105">获取左边框。</span><span class="sxs-lookup"><span data-stu-id="f8ef9-105">Gets the left border.</span></span>
 
-      <span data-ttu-id="a39ae-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a39ae-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f8ef9-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8ef9-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: left
     fullName: left
     langs:
@@ -57,9 +57,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#right:member'
     summary: |-
-      <span data-ttu-id="a39ae-108">获取右边框。</span><span class="sxs-lookup"><span data-stu-id="a39ae-108">Gets the right border.</span></span>
+      <span data-ttu-id="f8ef9-107">获取右边框。</span><span class="sxs-lookup"><span data-stu-id="f8ef9-107">Gets the right border.</span></span>
 
-      <span data-ttu-id="a39ae-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a39ae-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f8ef9-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8ef9-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: right
     fullName: right
     langs:
@@ -72,9 +72,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="a39ae-110">获取上边框。</span><span class="sxs-lookup"><span data-stu-id="a39ae-110">Gets the top border.</span></span>
+      <span data-ttu-id="f8ef9-109">获取上边框。</span><span class="sxs-lookup"><span data-stu-id="f8ef9-109">Gets the top border.</span></span>
 
-      <span data-ttu-id="a39ae-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a39ae-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f8ef9-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8ef9-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: top
     fullName: top
     langs:
