--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.customconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.customconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d5bd1-101">代表自定义条件格式类型。</span><span class="sxs-lookup"><span data-stu-id="d5bd1-101">Represents a custom conditional format type.</span></span>
+      <span data-ttu-id="9d103-101">代表自定义条件格式类型。</span><span class="sxs-lookup"><span data-stu-id="9d103-101">Represents a custom conditional format type.</span></span>
 
-      <span data-ttu-id="d5bd1-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d5bd1-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9d103-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d103-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.CustomConditionalFormatLoadOptions
     fullName: Excel.Interfaces.CustomConditionalFormatLoadOptions
     langs:
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.CustomConditionalFormatLoadOptions#format:member'
       - 'excel!Excel.Interfaces.CustomConditionalFormatLoadOptions#rule:member'
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatLoadOptions#$all:member'
+    summary: '<span data-ttu-id="9d103-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="9d103-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="9d103-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="9d103-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="9d103-105">).</span><span class="sxs-lookup"><span data-stu-id="9d103-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="d5bd1-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="d5bd1-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      <span data-ttu-id="9d103-106">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="9d103-106">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
 
-      <span data-ttu-id="d5bd1-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d5bd1-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9d103-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d103-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -43,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.CustomConditionalFormatLoadOptions#rule:member'
     summary: |-
-      <span data-ttu-id="d5bd1-105">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="d5bd1-105">Represents the Rule object on this conditional format.</span></span>
+      <span data-ttu-id="9d103-108">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="9d103-108">Represents the Rule object on this conditional format.</span></span>
 
-      <span data-ttu-id="d5bd1-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d5bd1-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="9d103-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9d103-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rule
     fullName: rule
     langs:
