--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.databarconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.databarconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="3817c-101">表示 Excel 条件数据栏类型。</span><span class="sxs-lookup"><span data-stu-id="3817c-101">Represents an Excel Conditional Data Bar Type.</span></span>
+      <span data-ttu-id="eb19e-101">表示 Excel 条件数据栏类型。</span><span class="sxs-lookup"><span data-stu-id="eb19e-101">Represents an Excel Conditional Data Bar Type.</span></span>
 
-      <span data-ttu-id="3817c-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.DataBarConditionalFormatLoadOptions
     fullName: Excel.Interfaces.DataBarConditionalFormatLoadOptions
     langs:
@@ -22,6 +22,7 @@ items:
       - 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#showDataBarOnly:member'
       - 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#upperBoundRule:member'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#$all:member'
+    summary: '<span data-ttu-id="eb19e-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="eb19e-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="eb19e-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="eb19e-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="eb19e-105">).</span><span class="sxs-lookup"><span data-stu-id="eb19e-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -34,9 +35,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#axisColor:member'
     summary: |-
-      <span data-ttu-id="3817c-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="3817c-103">HTML color code representing the color of the Axis line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="3817c-104">"" （空字符串）如果不存在或未设置轴。</span><span class="sxs-lookup"><span data-stu-id="3817c-104">"" (empty string) if no axis is present or set.</span></span>
+      <span data-ttu-id="eb19e-106">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="eb19e-106">HTML color code representing the color of the Axis line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="eb19e-107">"" （空字符串）如果不存在或未设置轴。</span><span class="sxs-lookup"><span data-stu-id="eb19e-107">"" (empty string) if no axis is present or set.</span></span>
 
-      <span data-ttu-id="3817c-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: axisColor
     fullName: axisColor
     langs:
@@ -49,9 +50,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#axisFormat:member'
     summary: |-
-      <span data-ttu-id="3817c-106">为 Excel 数据栏确定轴的方式的表示形式。</span><span class="sxs-lookup"><span data-stu-id="3817c-106">Representation of how the axis is determined for an Excel data bar.</span></span>
+      <span data-ttu-id="eb19e-109">为 Excel 数据栏确定轴的方式的表示形式。</span><span class="sxs-lookup"><span data-stu-id="eb19e-109">Representation of how the axis is determined for an Excel data bar.</span></span>
 
-      <span data-ttu-id="3817c-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: axisFormat
     fullName: axisFormat
     langs:
@@ -64,9 +65,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#barDirection:member'
     summary: |-
-      <span data-ttu-id="3817c-108">表示数据条图形应基于的方向。</span><span class="sxs-lookup"><span data-stu-id="3817c-108">Represents the direction that the data bar graphic should be based on.</span></span>
+      <span data-ttu-id="eb19e-111">表示数据条图形应基于的方向。</span><span class="sxs-lookup"><span data-stu-id="eb19e-111">Represents the direction that the data bar graphic should be based on.</span></span>
 
-      <span data-ttu-id="3817c-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-112">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: barDirection
     fullName: barDirection
     langs:
@@ -79,9 +80,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#lowerBoundRule:member'
     summary: |-
-      <span data-ttu-id="3817c-110">构成数据栏的下限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="3817c-110">The rule for what consistutes the lower bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="3817c-111">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.lowerBoundRule = {...}` ，而不是`x.lowerBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="3817c-111">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.lowerBoundRule = {...}` instead of `x.lowerBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="3817c-112">).</span><span class="sxs-lookup"><span data-stu-id="3817c-112"></span></span>
+      <span data-ttu-id="eb19e-113">构成数据栏的下限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="eb19e-113">The rule for what consistutes the lower bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="eb19e-114">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.lowerBoundRule = {...}` ，而不是`x.lowerBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="eb19e-114">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.lowerBoundRule = {...}` instead of `x.lowerBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="eb19e-115">).</span><span class="sxs-lookup"><span data-stu-id="eb19e-115"></span></span>
 
-      <span data-ttu-id="3817c-113">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-113">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-116">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-116">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: lowerBoundRule
     fullName: lowerBoundRule
     langs:
@@ -94,9 +95,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#negativeFormat:member'
     summary: |-
-      <span data-ttu-id="3817c-114">在 Excel 数据栏中的轴左侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="3817c-114">Representation of all values to the left of the axis in an Excel data bar.</span></span>
+      <span data-ttu-id="eb19e-117">在 Excel 数据栏中的轴左侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="eb19e-117">Representation of all values to the left of the axis in an Excel data bar.</span></span>
 
-      <span data-ttu-id="3817c-115">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-115">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-118">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-118">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: negativeFormat
     fullName: negativeFormat
     langs:
@@ -109,9 +110,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#positiveFormat:member'
     summary: |-
-      <span data-ttu-id="3817c-116">在 Excel 数据栏中的轴右侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="3817c-116">Representation of all values to the right of the axis in an Excel data bar.</span></span>
+      <span data-ttu-id="eb19e-119">在 Excel 数据栏中的轴右侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="eb19e-119">Representation of all values to the right of the axis in an Excel data bar.</span></span>
 
-      <span data-ttu-id="3817c-117">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-117">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-120">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-120">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: positiveFormat
     fullName: positiveFormat
     langs:
@@ -124,9 +125,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#showDataBarOnly:member'
     summary: |-
-      <span data-ttu-id="3817c-118">如果为 true，则对应用数据栏的单元格隐藏值。</span><span class="sxs-lookup"><span data-stu-id="3817c-118">If true, hides the values from the cells where the data bar is applied.</span></span>
+      <span data-ttu-id="eb19e-121">如果为 true，则对应用数据栏的单元格隐藏值。</span><span class="sxs-lookup"><span data-stu-id="eb19e-121">If true, hides the values from the cells where the data bar is applied.</span></span>
 
-      <span data-ttu-id="3817c-119">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-119">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-122">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-122">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showDataBarOnly
     fullName: showDataBarOnly
     langs:
@@ -139,9 +140,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatLoadOptions#upperBoundRule:member'
     summary: |-
-      <span data-ttu-id="3817c-120">构成数据栏的上限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="3817c-120">The rule for what constitutes the upper bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="3817c-121">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.upperBoundRule = {...}` ，而不是`x.upperBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="3817c-121">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.upperBoundRule = {...}` instead of `x.upperBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="3817c-122">).</span><span class="sxs-lookup"><span data-stu-id="3817c-122"></span></span>
+      <span data-ttu-id="eb19e-123">构成数据栏的上限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="eb19e-123">The rule for what constitutes the upper bound (and how to calculate it, if applicable) for a data bar.</span></span> <span data-ttu-id="eb19e-124">必须`ConditionalDataBarRule`将该对象设置为 JSON 对象（使用`x.upperBoundRule = {...}` ，而不是`x.upperBoundRule.formula = ...`</span><span class="sxs-lookup"><span data-stu-id="eb19e-124">The `ConditionalDataBarRule` object must be set as a JSON object (use `x.upperBoundRule = {...}` instead of `x.upperBoundRule.formula = ...`</span></span><!-- --><span data-ttu-id="eb19e-125">).</span><span class="sxs-lookup"><span data-stu-id="eb19e-125"></span></span>
 
-      <span data-ttu-id="3817c-123">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3817c-123">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="eb19e-126">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eb19e-126">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: upperBoundRule
     fullName: upperBoundRule
     langs:
