--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.iconsetconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.iconsetconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="df5e9-101">表示条件格式的 IconSet 条件。</span><span class="sxs-lookup"><span data-stu-id="df5e9-101">Represents an IconSet criteria for conditional formatting.</span></span>
+      <span data-ttu-id="22a96-101">表示条件格式的 IconSet 条件。</span><span class="sxs-lookup"><span data-stu-id="22a96-101">Represents an IconSet criteria for conditional formatting.</span></span>
 
-      <span data-ttu-id="df5e9-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="df5e9-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="22a96-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22a96-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.IconSetConditionalFormatLoadOptions
     fullName: Excel.Interfaces.IconSetConditionalFormatLoadOptions
     langs:
@@ -18,6 +18,7 @@ items:
       - 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions#showIconOnly:member'
       - 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions#style:member'
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions#$all:member'
+    summary: '<span data-ttu-id="22a96-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="22a96-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="22a96-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="22a96-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="22a96-105">).</span><span class="sxs-lookup"><span data-stu-id="22a96-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -30,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions#criteria:member'
     summary: |-
-      <span data-ttu-id="df5e9-103">用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。</span><span class="sxs-lookup"><span data-stu-id="df5e9-103">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="df5e9-104">请注意，对于第一个条件，只有自定义图标可以修改，而类型、公式和运算符在设置时将被忽略。</span><span class="sxs-lookup"><span data-stu-id="df5e9-104">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
+      <span data-ttu-id="22a96-106">用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。</span><span class="sxs-lookup"><span data-stu-id="22a96-106">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="22a96-107">请注意，对于第一个条件，只有自定义图标可以修改，而类型、公式和运算符在设置时将被忽略。</span><span class="sxs-lookup"><span data-stu-id="22a96-107">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
 
-      <span data-ttu-id="df5e9-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="df5e9-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="22a96-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22a96-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: criteria
     fullName: criteria
     langs:
@@ -45,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions#reverseIconOrder:member'
     summary: |-
-      <span data-ttu-id="df5e9-106">如果为 true，则反转 IconSet 的图标订单。</span><span class="sxs-lookup"><span data-stu-id="df5e9-106">If true, reverses the icon orders for the IconSet.</span></span> <span data-ttu-id="df5e9-107">请注意，如果使用自定义图标，则不能设置此设置。</span><span class="sxs-lookup"><span data-stu-id="df5e9-107">Note that this cannot be set if custom icons are used.</span></span>
+      <span data-ttu-id="22a96-109">如果为 true，则反转 IconSet 的图标订单。</span><span class="sxs-lookup"><span data-stu-id="22a96-109">If true, reverses the icon orders for the IconSet.</span></span> <span data-ttu-id="22a96-110">请注意，如果使用自定义图标，则不能设置此设置。</span><span class="sxs-lookup"><span data-stu-id="22a96-110">Note that this cannot be set if custom icons are used.</span></span>
 
-      <span data-ttu-id="df5e9-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="df5e9-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="22a96-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22a96-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: reverseIconOrder
     fullName: reverseIconOrder
     langs:
@@ -60,9 +61,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions#showIconOnly:member'
     summary: |-
-      <span data-ttu-id="df5e9-109">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="df5e9-109">If true, hides the values and only shows icons.</span></span>
+      <span data-ttu-id="22a96-112">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="22a96-112">If true, hides the values and only shows icons.</span></span>
 
-      <span data-ttu-id="df5e9-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="df5e9-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="22a96-113">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22a96-113">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showIconOnly
     fullName: showIconOnly
     langs:
@@ -75,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="df5e9-111">如果设置，则显示条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="df5e9-111">If set, displays the IconSet option for the conditional format.</span></span>
+      <span data-ttu-id="22a96-114">如果设置，则显示条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="22a96-114">If set, displays the IconSet option for the conditional format.</span></span>
 
-      <span data-ttu-id="df5e9-112">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="df5e9-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="22a96-115">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="22a96-115">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
