--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.iterativecalculationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.iterativecalculationupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.IterativeCalculationUpdateData:interface'
-    summary: '<span data-ttu-id="2d456-101">一个用于更新 IterativeCalculation 对象上的数据的接口，可用于 "iterativeCalculation （</span><span class="sxs-lookup"><span data-stu-id="2d456-101">An interface for updating data on the IterativeCalculation object, for use in "iterativeCalculation.set(</span></span><!-- --><span data-ttu-id="2d456-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="2d456-102"></span></span><!-- --><span data-ttu-id="2d456-103">)".</span><span class="sxs-lookup"><span data-stu-id="2d456-103"></span></span>'
+    summary: '<span data-ttu-id="b74db-101">一个用于更新 IterativeCalculation 对象上的数据的接口，可用于`iterativeCalculation.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="b74db-101">An interface for updating data on the IterativeCalculation object, for use in `iterativeCalculation.set({ ... })`</span></span><!-- --><span data-ttu-id="b74db-102">.</span><span class="sxs-lookup"><span data-stu-id="b74db-102"></span></span>'
     name: Excel.Interfaces.IterativeCalculationUpdateData
     fullName: Excel.Interfaces.IterativeCalculationUpdateData
     langs:
