--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.pivothierarchycollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.pivothierarchycollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionData:interface'
-    summary: <span data-ttu-id="5a22a-101">描述通过调用 "pivotHierarchyCollection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="5a22a-101">An interface describing the data returned by calling "pivotHierarchyCollection.toJSON()".</span></span>
+    summary: <span data-ttu-id="e4548-101">描述通过调用返回的数据的接口`pivotHierarchyCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e4548-101">An interface describing the data returned by calling `pivotHierarchyCollection.toJSON()`</span></span><!-- --><span data-ttu-id="e4548-102">.</span><span class="sxs-lookup"><span data-stu-id="e4548-102"></span></span>
     name: Excel.Interfaces.PivotHierarchyCollectionData
     fullName: Excel.Interfaces.PivotHierarchyCollectionData
     langs:
