--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.removeduplicatesresultdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.removeduplicatesresultdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RemoveDuplicatesResultData:interface'
-    summary: <span data-ttu-id="2985a-101">描述通过调用 "removeDuplicatesResult （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2985a-101">An interface describing the data returned by calling "removeDuplicatesResult.toJSON()".</span></span>
+    summary: <span data-ttu-id="e592c-101">描述通过调用返回的数据的接口`removeDuplicatesResult.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e592c-101">An interface describing the data returned by calling `removeDuplicatesResult.toJSON()`</span></span><!-- --><span data-ttu-id="e592c-102">.</span><span class="sxs-lookup"><span data-stu-id="e592c-102"></span></span>
     name: Excel.Interfaces.RemoveDuplicatesResultData
     fullName: Excel.Interfaces.RemoveDuplicatesResultData
     langs:
