--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.shapecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.shapecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="f568a-101">一个用于更新 ShapeCollection 对象上的数据的接口，可用于 "shapeCollection （</span><span class="sxs-lookup"><span data-stu-id="f568a-101">An interface for updating data on the ShapeCollection object, for use in "shapeCollection.set(</span></span><!-- --><span data-ttu-id="f568a-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="f568a-102"></span></span><!-- --><span data-ttu-id="f568a-103">)".</span><span class="sxs-lookup"><span data-stu-id="f568a-103"></span></span>'
+    summary: '<span data-ttu-id="9eab3-101">一个用于更新 ShapeCollection 对象上的数据的接口，可用于`shapeCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="9eab3-101">An interface for updating data on the ShapeCollection object, for use in `shapeCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="9eab3-102">.</span><span class="sxs-lookup"><span data-stu-id="9eab3-102"></span></span>'
     name: Excel.Interfaces.ShapeCollectionUpdateData
     fullName: Excel.Interfaces.ShapeCollectionUpdateData
     langs:
