--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.styleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.styleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.StyleUpdateData:interface'
-    summary: '<span data-ttu-id="bc92e-101">用于更新样式对象上的数据的接口，可用于 "style. set （</span><span class="sxs-lookup"><span data-stu-id="bc92e-101">An interface for updating data on the Style object, for use in "style.set(</span></span><!-- --><span data-ttu-id="bc92e-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="bc92e-102"></span></span><!-- --><span data-ttu-id="bc92e-103">)".</span><span class="sxs-lookup"><span data-stu-id="bc92e-103"></span></span>'
+    summary: '<span data-ttu-id="c4dc0-101">用于更新样式对象上的数据的接口，可用于`style.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="c4dc0-101">An interface for updating data on the Style object, for use in `style.set({ ... })`</span></span><!-- --><span data-ttu-id="c4dc0-102">.</span><span class="sxs-lookup"><span data-stu-id="c4dc0-102"></span></span>'
     name: Excel.Interfaces.StyleUpdateData
     fullName: Excel.Interfaces.StyleUpdateData
     langs:
