--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.tablecolumncollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.tablecolumncollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableColumnCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="a68ce-101">一个用于更新 TableColumnCollection 对象上的数据的接口，可用于 "tableColumnCollection （</span><span class="sxs-lookup"><span data-stu-id="a68ce-101">An interface for updating data on the TableColumnCollection object, for use in "tableColumnCollection.set(</span></span><!-- --><span data-ttu-id="a68ce-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="a68ce-102"></span></span><!-- --><span data-ttu-id="a68ce-103">)".</span><span class="sxs-lookup"><span data-stu-id="a68ce-103"></span></span>'
+    summary: '<span data-ttu-id="65055-101">一个用于更新 TableColumnCollection 对象上的数据的接口，可用于`tableColumnCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="65055-101">An interface for updating data on the TableColumnCollection object, for use in `tableColumnCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="65055-102">.</span><span class="sxs-lookup"><span data-stu-id="65055-102"></span></span>'
     name: Excel.Interfaces.TableColumnCollectionUpdateData
     fullName: Excel.Interfaces.TableColumnCollectionUpdateData
     langs:
