commit translated contents

--- a/docs/docs-ref-autogen/word_1_1/word/word.contentcontrol.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.contentcontrol.yml
@@ -281,7 +281,7 @@ items:
           - 'word!Word.Font:class'
   - uid: 'word!Word.ContentControl#getHtml:member(1)'
     summary: |-
-      获取内容控件对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式相匹配，但不完全相同。 对于不同平台（Windows、Mac 等）上的同一文档，此方法不会返回完全相同的 HTML。 如果您需要完全保真度或跨平台的一致性，请`ContentControl.getOoxml()`使用并将返回的 XML 转换为 HTML。
+      获取内容控件对象的 HTML 表示形式。 在网页或 HTML 查看器中呈现时，格式设置将与文档的格式设置完全匹配，但不完全匹配。 此方法不会为不同平台（Windows、Mac、web 上的 Word 等）上的同一文档返回完全相同的 HTML。 如果您需要完全保真度或跨平台的一致性，请`ContentControl.getOoxml()`使用并将返回的 XML 转换为 HTML。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getHtml()
@@ -423,7 +423,7 @@ items:
           - 'word!Word.InlinePictureCollection:class'
   - uid: 'word!Word.ContentControl#insertBreak:member(1)'
     summary: |-
-      在主文档的指定位置插入分隔符。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
+      在主文档的指定位置插入分隔符。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertBreak(breakType, insertLocation)'
@@ -448,7 +448,7 @@ items:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.ContentControl#insertBreak:member(2)'
     summary: |-
-      在主文档的指定位置插入分隔符。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
+      在主文档的指定位置插入分隔符。 此方法不能与 "RichTextTable"、"RichTextTableRow" 和 "RichTextTableCell" 内容控件一起使用。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertBreak(breakTypeString, insertLocation)'
@@ -514,7 +514,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.ContentControl#insertFileFromBase64:member(1)'
     summary: |-
-      将文档插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将文档插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertFileFromBase64(base64File, insertLocation)'
@@ -539,7 +539,7 @@ items:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.ContentControl#insertFileFromBase64:member(2)'
     summary: |-
-      将文档插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将文档插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertFileFromBase64(base64File, insertLocationString)'
@@ -564,7 +564,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.ContentControl#insertHtml:member(1)'
     summary: |-
-      将 HTML 插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将 HTML 插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertHtml(html, insertLocation)'
@@ -589,7 +589,7 @@ items:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.ContentControl#insertHtml:member(2)'
     summary: |-
-      将 HTML 插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将 HTML 插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertHtml(html, insertLocationString)'
@@ -656,7 +656,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.ContentControl#insertOoxml:member(1)'
     summary: |-
-      将 OOXML 插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将 OOXML 插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertOoxml(ooxml, insertLocation)'
@@ -681,7 +681,7 @@ items:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.ContentControl#insertOoxml:member(2)'
     summary: |-
-      将 OOXML 插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将 OOXML 插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertOoxml(ooxml, insertLocationString)'
@@ -749,7 +749,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.ContentControl#insertParagraph:member(1)'
     summary: |-
-      在指定位置插入段落。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      在指定位置插入段落。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertParagraph(paragraphText, insertLocation)'
@@ -774,7 +774,7 @@ items:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.ContentControl#insertParagraph:member(2)'
     summary: |-
-      在指定位置插入段落。 InsertLocation 值可以是 "Start"、"End"、"Before" 或 "After"。
+      在指定位置插入段落。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertParagraph(paragraphText, insertLocationString)'
@@ -839,7 +839,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: 'word!Word.ContentControl#insertText:member(1)'
     summary: |-
-      将文本插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将文本插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertText(text, insertLocation)'
@@ -864,7 +864,7 @@ items:
             - 'word!Word.InsertLocation:enum'
   - uid: 'word!Word.ContentControl#insertText:member(2)'
     summary: |-
-      将文本插入到内容控件中的指定位置。 insertLocation 值可以为“Replace”、“Start”或“End”。
+      将文本插入到内容控件中的指定位置。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertText(text, insertLocationString)'
@@ -1077,7 +1077,7 @@ items:
           - 'word!Word.ParagraphCollection:class'
   - uid: 'word!Word.ContentControl#parentContentControl:member'
     summary: |-
-      获取包含此内容控件的内容控件。 如果没有父内容控件，将引发此异常。 只读。
+      获取包含此内容控件的内容控件。 如果没有父内容控件，则会引发错误。 只读。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentContentControl
