--- a/docs/docs-ref-autogen/word_1_3/word/word.interfaces.paragraphupdatedata.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.interfaces.paragraphupdatedata.yml
@@ -131,7 +131,7 @@ items:
           - number
   - uid: 'word!Word.Interfaces.ParagraphUpdateData#listItem:member'
     summary: |-
-      获取 paragraph 的 ListItem。 如果段落不是列表的一部分，则引发。
+      获取 paragraph 的 ListItem。 如果段落不是列表的一部分，则会引发错误。
 
       \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: listItem
