--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.tablecolumnloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.tablecolumnloadoptions.yml
@@ -19,6 +19,7 @@ items:
       - 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
       - 'excel!Excel.Interfaces.TableColumnLoadOptions#values:member'
   - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#$all:member'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
