--- a/docs/docs-ref-autogen/word/word/word.contentcontrolcollection.yml
+++ b/docs/docs-ref-autogen/word/word/word.contentcontrolcollection.yml
@@ -44,7 +44,7 @@ items:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.ContentControlCollection#getById:member(1)'
     summary: |-
-      按其标识符获取内容控件。 如果此集合中没有带有标识符的内容控件，将引发此异常。
+      按其标识符获取内容控件。 如果此集合中没有带有标识符的内容控件，则会引发错误。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getById(id)
@@ -323,7 +323,7 @@ items:
             - 'word!Word.ContentControlCollection#getByTypes~0:complex'
   - uid: 'word!Word.ContentControlCollection#getFirst:member(1)'
     summary: |-
-      获取此集合中的第一个内容控件。 如果此集合为空，则引发。
+      获取此集合中的第一个内容控件。 如果此集合为空，则引发错误。
 
       \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getFirst()
