--- a/docs/docs-ref-autogen/word/word/word.sectioncollection.yml
+++ b/docs/docs-ref-autogen/word/word/word.sectioncollection.yml
@@ -38,7 +38,7 @@ items:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.SectionCollection#getFirst:member(1)'
     summary: |-
-      获取此集合中的第一节。 如果此集合为空，则引发。
+      获取此集合中的第一节。 如果此集合为空，则引发错误。
 
       \[[API 集： WordApi 1.3](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getFirst()
