--- a/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.interfaces.contentcontrolcollectionloadoptions.yml
@@ -130,7 +130,7 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ContentControlCollectionLoadOptions#parentContentControl:member'
     summary: |-
-      对于集合中的每一项：获取包含内容控件的内容控件。 如果没有父内容控件，将引发此异常。
+      对于集合中的每一项：获取包含内容控件的内容控件。 如果没有父内容控件，则会引发错误。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentContentControl
