commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.customxmlpartscopedcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.customxmlpartscopedcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="7cfea-101">一个用于更新 CustomXmlPartScopedCollection 对象上的数据的接口，可用于 "customXmlPartScopedCollection （</span><span class="sxs-lookup"><span data-stu-id="7cfea-101">An interface for updating data on the CustomXmlPartScopedCollection object, for use in "customXmlPartScopedCollection.set(</span></span><!-- --><span data-ttu-id="7cfea-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="7cfea-102"></span></span><!-- --><span data-ttu-id="7cfea-103">)".</span><span class="sxs-lookup"><span data-stu-id="7cfea-103"></span></span>'
+    summary: '<span data-ttu-id="f4277-101">一个用于更新 CustomXmlPartScopedCollection 对象上的数据的接口，可用于`customXmlPartScopedCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="f4277-101">An interface for updating data on the CustomXmlPartScopedCollection object, for use in `customXmlPartScopedCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="f4277-102">.</span><span class="sxs-lookup"><span data-stu-id="f4277-102"></span></span>'
     name: Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
     fullName: Excel.Interfaces.CustomXmlPartScopedCollectionUpdateData
     langs:
