--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.linedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.linedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.LineData:interface'
-    summary: <span data-ttu-id="0529f-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0529f-101">An interface describing the data returned by calling "line.toJSON()".</span></span>
+    summary: <span data-ttu-id="cb2dc-101">描述通过调用返回的数据的接口`line.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="cb2dc-101">An interface describing the data returned by calling `line.toJSON()`</span></span><!-- --><span data-ttu-id="cb2dc-102">.</span><span class="sxs-lookup"><span data-stu-id="cb2dc-102"></span></span>
     name: Excel.Interfaces.LineData
     fullName: Excel.Interfaces.LineData
     langs:
