--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.tabledata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.tabledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableData:interface'
-    summary: <span data-ttu-id="e0bd6-101">描述通过调用 "toJSON （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-101">An interface describing the data returned by calling "table.toJSON()".</span></span>
+    summary: <span data-ttu-id="c54af-101">描述通过调用返回的数据的接口`table.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="c54af-101">An interface describing the data returned by calling `table.toJSON()`</span></span><!-- --><span data-ttu-id="c54af-102">.</span><span class="sxs-lookup"><span data-stu-id="c54af-102"></span></span>
     name: Excel.Interfaces.TableData
     fullName: Excel.Interfaces.TableData
     langs:
@@ -24,9 +24,9 @@ items:
       - 'excel!Excel.Interfaces.TableData#style:member'
   - uid: 'excel!Excel.Interfaces.TableData#columns:member'
     summary: |-
-      <span data-ttu-id="e0bd6-102">表示表中所有列的集合。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-102">Represents a collection of all the columns in the table.</span></span> <span data-ttu-id="e0bd6-103">只读。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-103">Read-only.</span></span>
+      <span data-ttu-id="c54af-103">表示表中所有列的集合。</span><span class="sxs-lookup"><span data-stu-id="c54af-103">Represents a collection of all the columns in the table.</span></span> <span data-ttu-id="c54af-104">只读。</span><span class="sxs-lookup"><span data-stu-id="c54af-104">Read-only.</span></span>
 
-      <span data-ttu-id="e0bd6-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: columns
     fullName: columns
     langs:
@@ -39,9 +39,9 @@ items:
           - 'excel!Excel.Interfaces.TableData#columns~0:complex'
   - uid: 'excel!Excel.Interfaces.TableData#highlightFirstColumn:member'
     summary: |-
-      <span data-ttu-id="e0bd6-105">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-105">Indicates whether the first column contains special formatting.</span></span>
+      <span data-ttu-id="c54af-106">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="c54af-106">Indicates whether the first column contains special formatting.</span></span>
 
-      <span data-ttu-id="e0bd6-106">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-106">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-107">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightFirstColumn
     fullName: highlightFirstColumn
     langs:
@@ -54,9 +54,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#highlightLastColumn:member'
     summary: |-
-      <span data-ttu-id="e0bd6-107">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-107">Indicates whether the last column contains special formatting.</span></span>
+      <span data-ttu-id="c54af-108">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="c54af-108">Indicates whether the last column contains special formatting.</span></span>
 
-      <span data-ttu-id="e0bd6-108">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-108">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-109">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-109">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightLastColumn
     fullName: highlightLastColumn
     langs:
@@ -69,9 +69,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#id:member'
     summary: |-
-      <span data-ttu-id="e0bd6-p102">返回用于唯一标识指定工作簿中表的值。即使表被重命名，标识符的值仍然相同。只读。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-p102">Returns a value that uniquely identifies the table in a given workbook. The value of the identifier remains the same even when the table is renamed. Read-only.</span></span>
+      <span data-ttu-id="c54af-p102">返回用于唯一标识指定工作簿中表的值。即使表被重命名，标识符的值仍然相同。只读。</span><span class="sxs-lookup"><span data-stu-id="c54af-p102">Returns a value that uniquely identifies the table in a given workbook. The value of the identifier remains the same even when the table is renamed. Read-only.</span></span>
 
-      <span data-ttu-id="e0bd6-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -84,9 +84,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.TableData#name:member'
     summary: |-
-      <span data-ttu-id="e0bd6-113">表的名称。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-113">Name of the table.</span></span>
+      <span data-ttu-id="c54af-114">表的名称。</span><span class="sxs-lookup"><span data-stu-id="c54af-114">Name of the table.</span></span>
 
-      <span data-ttu-id="e0bd6-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -99,9 +99,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.TableData#rows:member'
     summary: |-
-      <span data-ttu-id="e0bd6-115">表示表中所有行的集合。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-115">Represents a collection of all the rows in the table.</span></span> <span data-ttu-id="e0bd6-116">只读。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-116">Read-only.</span></span>
+      <span data-ttu-id="c54af-116">表示表中所有行的集合。</span><span class="sxs-lookup"><span data-stu-id="c54af-116">Represents a collection of all the rows in the table.</span></span> <span data-ttu-id="c54af-117">只读。</span><span class="sxs-lookup"><span data-stu-id="c54af-117">Read-only.</span></span>
 
-      <span data-ttu-id="e0bd6-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rows
     fullName: rows
     langs:
@@ -114,9 +114,9 @@ items:
           - 'excel!Excel.Interfaces.TableData#rows~0:complex'
   - uid: 'excel!Excel.Interfaces.TableData#showBandedColumns:member'
     summary: |-
-      <span data-ttu-id="e0bd6-118">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-118">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="c54af-119">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="c54af-119">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="e0bd6-119">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-119">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-120">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-120">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedColumns
     fullName: showBandedColumns
     langs:
@@ -129,9 +129,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showBandedRows:member'
     summary: |-
-      <span data-ttu-id="e0bd6-120">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-120">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="c54af-121">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="c54af-121">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="e0bd6-121">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-121">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-122">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-122">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedRows
     fullName: showBandedRows
     langs:
@@ -144,9 +144,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showFilterButton:member'
     summary: |-
-      <span data-ttu-id="e0bd6-p104">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-p104">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
+      <span data-ttu-id="c54af-p104">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="c54af-p104">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
 
-      <span data-ttu-id="e0bd6-124">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-124">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-125">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-125">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showFilterButton
     fullName: showFilterButton
     langs:
@@ -159,9 +159,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showHeaders:member'
     summary: |-
-      <span data-ttu-id="e0bd6-125">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-125">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="e0bd6-126">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-126">This value can be set to show or remove the header row.</span></span>
+      <span data-ttu-id="c54af-126">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="c54af-126">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="c54af-127">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="c54af-127">This value can be set to show or remove the header row.</span></span>
 
-      <span data-ttu-id="e0bd6-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-128">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-128">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showHeaders
     fullName: showHeaders
     langs:
@@ -174,9 +174,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#showTotals:member'
     summary: |-
-      <span data-ttu-id="e0bd6-128">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-128">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="e0bd6-129">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-129">This value can be set to show or remove the total row.</span></span>
+      <span data-ttu-id="c54af-129">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="c54af-129">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="c54af-130">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="c54af-130">This value can be set to show or remove the total row.</span></span>
 
-      <span data-ttu-id="e0bd6-130">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-130">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-131">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-131">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showTotals
     fullName: showTotals
     langs:
@@ -189,9 +189,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableData#sort:member'
     summary: |-
-      <span data-ttu-id="e0bd6-131">表示表的排序。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-131">Represents the sorting for the table.</span></span> <span data-ttu-id="e0bd6-132">只读。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-132">Read-only.</span></span>
+      <span data-ttu-id="c54af-132">表示表的排序。</span><span class="sxs-lookup"><span data-stu-id="c54af-132">Represents the sorting for the table.</span></span> <span data-ttu-id="c54af-133">只读。</span><span class="sxs-lookup"><span data-stu-id="c54af-133">Read-only.</span></span>
 
-      <span data-ttu-id="e0bd6-133">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-133">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-134">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-134">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: sort
     fullName: sort
     langs:
@@ -204,9 +204,9 @@ items:
           - 'excel!Excel.Interfaces.TableSortData:interface'
   - uid: 'excel!Excel.Interfaces.TableData#style:member'
     summary: |-
-      <span data-ttu-id="e0bd6-134">表示表格样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-134">Constant value that represents the Table style.</span></span> <span data-ttu-id="e0bd6-135">可能的值为： "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleStyleDark1" 到 "TableStyleStyleDark11"。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-135">Possible values are: "TableStyleLight1" through "TableStyleLight21", "TableStyleMedium1" through "TableStyleMedium28", "TableStyleStyleDark1" through "TableStyleStyleDark11".</span></span> <span data-ttu-id="e0bd6-136">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="e0bd6-136">A custom user-defined style present in the workbook can also be specified.</span></span>
+      <span data-ttu-id="c54af-135">表示表格样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="c54af-135">Constant value that represents the Table style.</span></span> <span data-ttu-id="c54af-136">可能的值为： "TableStyleLight1" 到 "TableStyleLight21"、"TableStyleMedium1" 通过 "TableStyleMedium28"、"TableStyleStyleDark1" 到 "TableStyleStyleDark11"。</span><span class="sxs-lookup"><span data-stu-id="c54af-136">Possible values are: "TableStyleLight1" through "TableStyleLight21", "TableStyleMedium1" through "TableStyleMedium28", "TableStyleStyleDark1" through "TableStyleStyleDark11".</span></span> <span data-ttu-id="c54af-137">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="c54af-137">A custom user-defined style present in the workbook can also be specified.</span></span>
 
-      <span data-ttu-id="e0bd6-137">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0bd6-137">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="c54af-138">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c54af-138">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
