--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendentryloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendentryloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="0b856-101">表示 legendEntryCollection 中的 legendEntry。</span><span class="sxs-lookup"><span data-stu-id="0b856-101">Represents the legendEntry in legendEntryCollection.</span></span>
+      <span data-ttu-id="65f35-101">表示 legendEntryCollection 中的 legendEntry。</span><span class="sxs-lookup"><span data-stu-id="65f35-101">Represents the legendEntry in legendEntryCollection.</span></span>
 
-      <span data-ttu-id="0b856-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0b856-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="65f35-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65f35-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartLegendEntryLoadOptions
     fullName: Excel.Interfaces.ChartLegendEntryLoadOptions
     langs:
@@ -20,6 +20,7 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
       - 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#$all:member'
+    summary: '<span data-ttu-id="65f35-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="65f35-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="65f35-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="65f35-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="65f35-105">).</span><span class="sxs-lookup"><span data-stu-id="65f35-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -32,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="0b856-103">表示图表图例上的 legendEntry 的高度。</span><span class="sxs-lookup"><span data-stu-id="0b856-103">Represents the height of the legendEntry on the chart legend.</span></span>
+      <span data-ttu-id="65f35-106">表示图表图例上的 legendEntry 的高度。</span><span class="sxs-lookup"><span data-stu-id="65f35-106">Represents the height of the legendEntry on the chart legend.</span></span>
 
-      <span data-ttu-id="0b856-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0b856-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="65f35-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65f35-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: height
     fullName: height
     langs:
@@ -47,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="0b856-105">表示图表图例中的 legendEntry 的索引。</span><span class="sxs-lookup"><span data-stu-id="0b856-105">Represents the index of the legendEntry in the chart legend.</span></span>
+      <span data-ttu-id="65f35-108">表示图表图例中的 legendEntry 的索引。</span><span class="sxs-lookup"><span data-stu-id="65f35-108">Represents the index of the legendEntry in the chart legend.</span></span>
 
-      <span data-ttu-id="0b856-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0b856-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="65f35-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65f35-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: index
     fullName: index
     langs:
@@ -62,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="0b856-107">表示图表 legendEntry 的左侧。</span><span class="sxs-lookup"><span data-stu-id="0b856-107">Represents the left of a chart legendEntry.</span></span>
+      <span data-ttu-id="65f35-110">表示图表 legendEntry 的左侧。</span><span class="sxs-lookup"><span data-stu-id="65f35-110">Represents the left of a chart legendEntry.</span></span>
 
-      <span data-ttu-id="0b856-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0b856-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="65f35-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65f35-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: left
     fullName: left
     langs:
@@ -77,9 +78,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="0b856-109">表示图表 legendEntry 的顶部。</span><span class="sxs-lookup"><span data-stu-id="0b856-109">Represents the top of a chart legendEntry.</span></span>
+      <span data-ttu-id="65f35-112">表示图表 legendEntry 的顶部。</span><span class="sxs-lookup"><span data-stu-id="65f35-112">Represents the top of a chart legendEntry.</span></span>
 
-      <span data-ttu-id="0b856-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0b856-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="65f35-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65f35-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: top
     fullName: top
     langs:
@@ -92,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="0b856-111">表示图表图例条目可见。</span><span class="sxs-lookup"><span data-stu-id="0b856-111">Represents the visible of a chart legend entry.</span></span>
+      <span data-ttu-id="65f35-114">表示图表图例条目可见。</span><span class="sxs-lookup"><span data-stu-id="65f35-114">Represents the visible of a chart legend entry.</span></span>
 
-      <span data-ttu-id="0b856-112">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0b856-112">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="65f35-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65f35-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
@@ -107,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendEntryLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="0b856-113">表示图表图例上的 legendEntry 的宽度。</span><span class="sxs-lookup"><span data-stu-id="0b856-113">Represents the width of the legendEntry on the chart Legend.</span></span>
+      <span data-ttu-id="65f35-116">表示图表图例上的 legendEntry 的宽度。</span><span class="sxs-lookup"><span data-stu-id="65f35-116">Represents the width of the legendEntry on the chart Legend.</span></span>
 
-      <span data-ttu-id="0b856-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0b856-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="65f35-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="65f35-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: width
     fullName: width
     langs:
