--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotareaupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotareaupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData:interface'
-    summary: '<span data-ttu-id="cb6ce-101">一个用于更新 ChartPlotArea 对象上的数据的接口，可用于 "chartPlotArea （</span><span class="sxs-lookup"><span data-stu-id="cb6ce-101">An interface for updating data on the ChartPlotArea object, for use in "chartPlotArea.set(</span></span><!-- --><span data-ttu-id="cb6ce-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="cb6ce-102"></span></span><!-- --><span data-ttu-id="cb6ce-103">)".</span><span class="sxs-lookup"><span data-stu-id="cb6ce-103"></span></span>'
+    summary: '<span data-ttu-id="fc08b-101">一个用于更新 ChartPlotArea 对象上的数据的接口，可用于`chartPlotArea.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="fc08b-101">An interface for updating data on the ChartPlotArea object, for use in `chartPlotArea.set({ ... })`</span></span><!-- --><span data-ttu-id="fc08b-102">.</span><span class="sxs-lookup"><span data-stu-id="fc08b-102"></span></span>'
     name: Excel.Interfaces.ChartPlotAreaUpdateData
     fullName: Excel.Interfaces.ChartPlotAreaUpdateData
     langs:
@@ -21,9 +21,9 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="cb6ce-104">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-104">Represents the formatting of a chart plotArea.</span></span>
+      <span data-ttu-id="fc08b-103">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="fc08b-103">Represents the formatting of a chart plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#height:member'
     summary: |-
-      <span data-ttu-id="cb6ce-106">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-106">Represents the height value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-105">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-105">Represents the height value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: height
     fullName: height
     langs:
@@ -51,9 +51,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideHeight:member'
     summary: |-
-      <span data-ttu-id="cb6ce-108">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-108">Represents the insideHeight value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-107">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-107">Represents the insideHeight value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideHeight
     fullName: insideHeight
     langs:
@@ -66,9 +66,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideLeft:member'
     summary: |-
-      <span data-ttu-id="cb6ce-110">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-110">Represents the insideLeft value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-109">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-109">Represents the insideLeft value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideLeft
     fullName: insideLeft
     langs:
@@ -81,9 +81,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideTop:member'
     summary: |-
-      <span data-ttu-id="cb6ce-112">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-112">Represents the insideTop value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-111">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-111">Represents the insideTop value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideTop
     fullName: insideTop
     langs:
@@ -96,9 +96,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideWidth:member'
     summary: |-
-      <span data-ttu-id="cb6ce-114">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-114">Represents the insideWidth value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-113">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-113">Represents the insideWidth value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-115">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideWidth
     fullName: insideWidth
     langs:
@@ -111,9 +111,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="cb6ce-116">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-116">Represents the left value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-115">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-115">Represents the left value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: left
     fullName: left
     langs:
@@ -126,9 +126,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="cb6ce-118">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-118">Represents the position of plotArea.</span></span>
+      <span data-ttu-id="fc08b-117">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="fc08b-117">Represents the position of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-118">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -141,9 +141,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="cb6ce-120">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-120">Represents the top value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-119">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-119">Represents the top value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-121">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-121">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-120">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-120">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: top
     fullName: top
     langs:
@@ -156,9 +156,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="cb6ce-122">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="cb6ce-122">Represents the width value of plotArea.</span></span>
+      <span data-ttu-id="fc08b-121">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="fc08b-121">Represents the width value of plotArea.</span></span>
 
-      <span data-ttu-id="cb6ce-123">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cb6ce-123">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fc08b-122">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fc08b-122">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: width
     fullName: width
     langs:
