--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.headerfooterupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.headerfooterupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
-    summary: '<span data-ttu-id="6bcb8-101">一个用于更新 HeaderFooter 对象上的数据的接口，可用于 "headerFooter （</span><span class="sxs-lookup"><span data-stu-id="6bcb8-101">An interface for updating data on the HeaderFooter object, for use in "headerFooter.set(</span></span><!-- --><span data-ttu-id="6bcb8-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="6bcb8-102"></span></span><!-- --><span data-ttu-id="6bcb8-103">)".</span><span class="sxs-lookup"><span data-stu-id="6bcb8-103"></span></span>'
+    summary: '<span data-ttu-id="7d1ad-101">一个用于更新 HeaderFooter 对象上的数据的接口，可用于`headerFooter.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="7d1ad-101">An interface for updating data on the HeaderFooter object, for use in `headerFooter.set({ ... })`</span></span><!-- --><span data-ttu-id="7d1ad-102">.</span><span class="sxs-lookup"><span data-stu-id="7d1ad-102"></span></span>'
     name: Excel.Interfaces.HeaderFooterUpdateData
     fullName: Excel.Interfaces.HeaderFooterUpdateData
     langs:
